--- a/paper/admission.tex
+++ b/paper/admission.tex
@@ -1,8 +1,9 @@
 % !TeX root = thesis.tex
 
-\chapter*{Admission}
+\vspace*{6in}
+
 \selectlanguage{english}
-\noindent The author gives the permission to use this thesis for consultation and to copy parts of this thesis for personal use. Every other use is subject to the copyright laws, more specifically the source must be extensively specified when using results from this thesis.\\
+\noindent The author gives the permission to use this thesis for consultation and to copy parts of it for personal use. Every other use is subject to the copyright laws, more specifically the source must be extensively specified when using from this thesis.\\
 
 \selectlanguage{dutch}
 \noindent De auteur geeft de toelating deze masterproef voor consultatie beschikbaar te stellen en delen van de masterproef te kopi\"eren voor persoonlijk gebruik. Elk ander gebruik valt onder de bepalingen van het auteursrecht, in het bijzonder met betrekking tot de verplichting de bron uitdrukkelijk te vermelden bij het aanhalen van resultaten uit deze masterproef.\\
