--- a/paper/evaluation/data-collection/dodona.tex
+++ b/paper/evaluation/data-collection/dodona.tex
@@ -1,9 +1,11 @@
 % !TeX root = ../../thesis.tex
 
-\subsection{Dodona build data}
-As mentioned before, Dodona makes use of the MiniTest testing framework and the SimpleCov coverage tracker. By default, MiniTest only emits which test cases have failed without any further information. Furthermore, SimpleCov is only capable of calculating the coverage for the entire test suite and does not allow to retrieve the coverage on a per-test basis. In order to answer the fourth research question which analyses the performance of applying the \velocity{} predictors to Dodona, a Python script has been created to repeat every failed test run in a modified way to allow timing the execution and tracking the individual test case coverage. Essentially, this script queries the API of \githubactions{} to find failed test runs, \SI{62}{} failed runs were used in this thesis. For every failed commit, the script queries the API again to find the first successfully tested parent commit. These parent commits are used to obtain the coverage per test case on a codebase which resembles the failed commits as close as possible. After the appropriate parent commits have been identified, they are modified by applying the following two transformations and subsequently rescheduled in \githubactions{}:
+\subsection{Dodona data}
+As mentioned before, Dodona utilises the MiniTest testing framework in conjunction with SimpleCov to calculate the coverage. MiniTest will by default only emit the name of every failed test case, without any further information. Furthermore, SimpleCov is only capable of calculating the coverage for the entire test suite and does not allow to retrieve the coverage on a per-test basis. To answer the fourth research question and apply the \velocity{} predictors to Dodona, a Python script has been created to reconstruct every failed test run. This script first queries the API of \githubactions{} to find which test runs have failed. In this thesis, $\SI{62}{}$ failed runs have been used. For every failed commit, the script retrieves the parent commit and calculates the coverage on a per-test basis. This thesis will assume that the coverage of the parent commit resembles the coverage of the failed commit. The coverage is calculated by applying the following two transformations to the parent commits and subsequently rescheduling these in \githubactions{}:
+
 \begin{itemize}
-	\item \textbf{Cobertura formatter:} The currently used coverage formatter is only capable of generating a HTML report of the coverage, which is not desirable for analysis. The Cobertura formatter on the other hand is able to generate XML reports instead, these are already supported by the Controller and Java agent.
+	\item \textbf{Cobertura formatter:} The current SimpleCov reports can only be generated as HTML reports, preventing convenient analysis. This problem is resolved by using the Cobertura formatter instead, which generates XML reports. The structure of these reports is already supported by the Controller.
 	
-	\item \textbf{Disable parallel execution:} By default, the test cases are executed concurrently and divided over four processes. However, since SimpleCov is not thread-safe, this would render the tracked coverage invalid.
+	\item \textbf{Parallel execution:} To reduce the execution time, the test cases are concurrently executed by four processes. The code coverage is recorded per process and afterwards merged. However, SimpleCov is not entirely thread-safe. This is not a problem if the total coverage is required, but it does prevent the accurate generation of per-test coverage. As a result, parallel execution has been disabled.
+	
 \end{itemize}
