--- a/paper/evaluation/results.tex
+++ b/paper/evaluation/results.tex
@@ -3,7 +3,7 @@
 \section{Results}
 
 \subsection{RQ1: Probability of failure}\label{ssec:results-rq1}
-\autoref{fig:rq1-failure-probability} contains two pie charts that illustrate the amount of failed and successful test runs. The left chart contains the results of the dataset provided by Durieux et al \cite{travisanalysis}. This dataset contains $\SI{4558279}{}$ failed test runs versus $\SI{24323724}{}$ successful runs, which corresponds to a failure probability of $\SI{18.74}{\percent}$. The other pie chart visualises data from the TravisTorrent project. According to this dataset, the run has failed prior to starting the test suite in $\SI{42.89}{\percent}$ of the executions. For the remaining part of the runs, $\SI{225766}{}$ out of $\SI{2114920}{}$ executions contained at least one failed test case, corresponding to a failure percentage of $\SI{10.67}{\percent}$.
+The two pie charts in \Cref{fig:rq1-failure-probability} illustrate the amount of failed and successful test runs. The leftmost chart visualises the failure rate in the dataset \cite{travisanalysis} by Durieux et al. $\SI{4558279}{}$ test runs out of the $\SI{28882003}{}$ total runs have failed, which corresponds to a failure probability of $\SI{18.74}{\percent}$. The other pie chart uses data from the TravisTorrent \cite{msr17challenge} project. Since the cause of failure can be inferred from this dataset, it is possible to obtain more accurate results. $\SI{42.89}{\percent}$ of the failed runs are due to a compilation failure where the test suite did not execute. For the remaining part of the runs, $\SI{225766}{}$ out of $\SI{2114920}{}$ executions contain at least one failed test case, corresponding to a failure percentage of $\SI{10.67}{\percent}$.
 
 \begin{figure}[htbp!]
 	\centering
@@ -12,18 +12,8 @@
 	\label{fig:rq1-failure-probability}
 \end{figure}
 
-\subsection{RQ2: Probability of consecutive failure}
-In order to find consecutive failures, only the TravisTorrent project can be used as every entry in this dataset contains the identifier of the previous build which is required to link consecutive builds. The dataset contains $\SI{211040}{}$ test runs of which the test suite of the preceding test run was both executed and contained at least one failed test case. As illustrated in \autoref{fig:rq2-consecutive-failure}, $\SI{109224}{}$ of these test runs failed as well, versus $\SI{101816}{}$ test runs ($\SI{51.76}{\percent}$) that did succeed.
-
-\begin{figure}[htbp!]
-	\centering
-	\includegraphics[width=\textwidth]{assets/charts/rq2-consecutive-failure.pdf}
-	\caption{Consecutive test run failures on \travisci{}}
-	\label{fig:rq2-consecutive-failure}
-\end{figure}
-
-\subsection{RQ3: Average test run duration}
-The \travisci{} dataset provided by Durieux et al \cite{travisanalysis} has been filtered to exclude test runs with an execution time of less than $\SI{10}{\second}$, as this generally implies that the test suite did not actually execute due to an initialisation failure. \autoref{tbl:rq3-characteristics} contains the characteristics of the remaining analysed test runs. This table suggests that \travisci{} is primarily used for small projects, yet the maximal value is a strong outlier. \autoref{fig:rq3-durations} confirms the existence of $\SI{71378}{}$ test runs with an execution time of more than one hour. Further investigation has pointed out that these are mostly projects which are using mutation testing (\autoref{sssec:mutation-testing}), such as \texttt{plexus/yaks}\footnote{A Ruby library for hypermedia (\url{https://github.com/plexus/yaks}).}.
+\subsection{RQ3: Average duration of a test run}
+The dataset by Durieux et al. \cite{travisanalysis} has been refined to only include test runs that did not finish within $\SI{10}{s}$. A lower execution time generally indicates that the test suite did not execute and that a compilation failure has occurred instead. \Cref{tbl:rq2-characteristics} contains the characteristics of the remaining $\SI{24320504}{}$ analysed test runs. The median and average execution times suggest that primarily small projects are \travisci{}, yet the maximum value is very high. \Cref{fig:rq2-durations} confirms that $\SI{71378}{}$ test runs have taken longer than one hour to execute. Further investigation has revealed that these are typically projects which are using mutation testing, such as \texttt{plexus/yaks}\footnote{A Ruby library for hypermedia (\url{https://github.com/plexus/yaks}).}.
 
 \begin{table}[h]
 	\centering
@@ -35,51 +25,31 @@ The \travisci{} dataset provided by Durieux et al \cite{travisanalysis} has been
 		\hline
 	\end{tabularx}
 	\caption{Characteristics of the test run durations in \cite{travisanalysis}.}
-	\label{tbl:rq3-characteristics}
+	\label{tbl:rq2-characteristics}
 \end{table}
 
 \begin{figure}[htbp!]
 	\centering
-	\includegraphics[width=\textwidth]{assets/charts/rq3-test-run-durations.pdf}
+	\includegraphics[width=\textwidth]{assets/charts/rq2-test-run-durations.pdf}
 	\caption{Test run durations on \travisci{}}
-	\label{fig:rq3-durations}
+	\label{fig:rq2-durations}
 \end{figure}
 
 
-\subsection{RQ4: Applying \tcp{} to Dodona}
-Given the $\SI{62}{}$ collected test runs, another $\SI{9}{}$ runs have been omitted because these have been identified as a bug in the configuration of the test suite, preventing any test to be executed at all. This is something which cannot be detected by a prioritisation framework, since this requires more contextual information about the project.\\
-
-\noindent \autoref{fig:rq4-performance} compares the performance of respectively the Alpha algorithm, the Greedy algorithm, the HGS algorithm and the ROCKET algorithm to the original, non-prioritised execution. The Alpha and HGS algorithm provide the most accurate predictions, with the latter algorithm being the least consistent. The Greedy algorithm on the other hand succeeds in predicting some executions very accurately, while failing to predict other runs anywhere near, which is the expected behaviour of a greedy heuristic. Finally, the ROCKET algorithm is not suitable for this project.\\
+\subsection{RQ3: Consecutive failure probability}
+Because the TravisTorrent project is the only dataset that contains the identifier of the previous run, only runs from this project have been used. This dataset consists of $\SI{211040}{}$ test runs, immediately following a failed execution. As illustrated in \Cref{fig:rq3-consecutive-failure}, $\SI{109224}{}$ of these test runs have failed as well, versus $\SI{101816}{}$ successful test runs ($\SI{51.76}{\percent}$).
 
 \begin{figure}[htbp!]
-\centering
-\subfloat[Alpha algorithm]{%
-	\includegraphics[width=\textwidth]{assets/charts/rq4-dodona-alpha.pdf}
-}
-\end{figure}
-\begin{figure}
-\ContinuedFloat
-\subfloat[Greedy algorithm]{%
-	\includegraphics[width=\textwidth]{assets/charts/rq4-dodona-greedy.pdf}
-}
-\end{figure}
-\begin{figure}
-\ContinuedFloat
-\subfloat[HGS algorithm]{%
-	\includegraphics[width=\textwidth]{assets/charts/rq4-dodona-hgs.pdf}
-}
-\end{figure}
-\begin{figure}
-\ContinuedFloat
-\centering
-\subfloat[ROCKET algorithm]{%
-	\includegraphics[width=\textwidth]{assets/charts/rq4-dodona-rocket.pdf}
-}
-\caption{Prediction performance on the Dodona project}
-\label{fig:rq4-performance}
+	\centering
+	\includegraphics[width=\textwidth]{assets/charts/rq3-consecutive-failure.pdf}
+	\caption{Consecutive test run failures on \travisci{}}
+	\label{fig:rq3-consecutive-failure}
 \end{figure}
 
-\noindent \autoref{tbl:rq4-first-failure} contains the minimum, mean, median and maximum median amount of test cases until the first failure is observed. This table indicates that, except for the GreedyCoverAffected algorithm\footnote{The AllInOrder algorithm can be considered a deterministic random algorithm and therefore not an actual predictor.}, every predictor is able to perform at least one successful prediction. Furthermore, the maximum amount of executed test cases is lower than the original, for every predictor. The previous paragraph has already observed that the Alpha and HGS algorithm provide the best prediction accuracy for Dodona, this hypothesis is confirmed by the low median and mean values for these algorithms. These values confirm as well that the ROCKET algorithm is not able of providing accurate predictions.
+\subsection{RQ4: Applying \tcp{} to Dodona}
+After executing the $\SI{62}{}$ failed test runs, the log files have been inspected. The log files have revealed that $\SI{9}{}$ test runs have failed because of an error in the configuration, rather than due to a failing test case. These test runs have therefore been omitted from the results because the test suite did not execute. Configuration problems require in-depth contextual information about the project and can therefore not be predicted.\\
+
+\noindent \Cref{tbl:rq4-first-failure} contains the amount of executed test cases until the first failure is observed. These results indicate that every predictor but one\footnote{The AllInOrder algorithm can be considered as a  deterministic random algorithm, rather than an actual predictor.}, is capable of performing at least one successful prediction. Furthermore, the maximum amount of executed test cases is lower than the original value, which means that every algorithm is a valid predictor. The data suggests that the Alpha algorithm and the HGS algorithm are the preferred predictors for the Dodona project, while the ROCKET algorithm does not achieve a good performance.
 
 \begin{table}[h]
 	\centering
@@ -121,9 +91,41 @@ Given the $\SI{62}{}$ collected test runs, another $\SI{9}{}$ runs have been omi
 	\label{tbl:rq4-first-failure}
 \end{table}
 
-\noindent Similarly, \autoref{tbl:rq4-first-failure-duration} contains the minimum, mean, maximum and median duration until the first failed test case is observed. This data further confirms the observations made in the previous paragraph and the effectiveness of the GreedyTimeAll predictor. Notice that the ROCKET algorithm performs better time-wise than quantity wise.
+\noindent The previous results have been visualised in \Cref{fig:rq4-performance}. These charts confirm the low accuracy of the ROCKET algorithm. The Alpha algorithm and the HGS algorithm offer the most accurate predictions, with the former algorithm being the most consistent. Notice the chart of the Greedy algorithm, which succeeds in successfully predicting some of the test runs, while failing to predict others. This behaviour is specific to a greedy heuristic.\\
 
-\begin{table}[h]
+\clearpage
+
+\begin{figure}[!hbp]
+	\subfloat[Alpha algorithm]{%
+		\includegraphics[width=\textwidth]{assets/charts/rq4-dodona-alpha.pdf}
+	}
+\end{figure}
+\begin{figure}[!hbp]
+	\ContinuedFloat
+	\subfloat[Greedy algorithm]{%
+		\includegraphics[width=\textwidth]{assets/charts/rq4-dodona-greedy.pdf}
+	}
+\end{figure}
+\begin{figure}[!hbp]
+	\ContinuedFloat
+	\subfloat[HGS algorithm]{%
+		\includegraphics[width=\textwidth]{assets/charts/rq4-dodona-hgs.pdf}
+	}
+\end{figure}
+\begin{figure}[!t]
+	\ContinuedFloat
+	\centering
+	\subfloat[ROCKET algorithm]{%
+		\includegraphics[width=\textwidth]{assets/charts/rq4-dodona-rocket.pdf}
+	}
+	\caption{Prediction performance on the Dodona project}
+	\label{fig:rq4-performance}
+\end{figure}
+
+
+\noindent The duration until the first observed failure is reported in \Cref{tbl:rq4-first-failure-duration}. Observe that the previous table indicates that the ROCKET algorithm does not perform well, while this table suggests otherwise. This behaviour is explained by the objective function of this algorithm, which prioritises test cases with a low execution time to be executed first.
+
+\begin{table}[htbp!]
 	\centering
 	\begin{tabularx}{\textwidth}{|X||c|c|c|c|}
 		\hline
@@ -163,66 +165,104 @@ Given the $\SI{62}{}$ collected test runs, another $\SI{9}{}$ runs have been omi
 	\label{tbl:rq4-first-failure-duration}
 \end{table}
 
-    duration         Original        AllRandom     
-Min.   :118165   Min.   :  0.00   Min.   : 0.000  
-1st Qu.:195877   1st Qu.:  0.00   1st Qu.: 0.000  
-Median :297371   Median :  2.00   Median : 4.000  
-Mean   :303527   Mean   : 67.57   Mean   : 9.257  
-3rd Qu.:414956   3rd Qu.:110.00   3rd Qu.:13.500  
-Max.   :505996   Max.   :278.00   Max.   :64.000  
+\clearpage
 
-AllInOrder     GreedyCoverAll   AffectedRandom  
-Min.   : 0.000   Min.   : 0.000   Min.   : 0.000  
-1st Qu.: 0.000   1st Qu.: 0.000   1st Qu.: 0.000  
-Median : 1.000   Median : 1.000   Median : 2.000  
-Mean   : 9.229   Mean   : 8.971   Mean   : 8.886  
-3rd Qu.:12.000   3rd Qu.:13.000   3rd Qu.:11.500  
-Max.   :37.000   Max.   :44.000   Max.   :45.000  
+\subsection{RQ5: Integrate \velocity{} with Stratego}
+The data collection phase has already proven that the Java agent is compatible with Stratego. Since \velocity{} is not yet able to predict test cases which have been added in the current commit, only $\SI{35}{}$ of the $\SI{54}{}$ failed test runs could be used.\\
 
-HGSAffected     GreedyCoverAffected     HGSAll    
-Min.   : 0.000   Min.   : 0.00       Min.   : 0.0  
-1st Qu.: 0.000   1st Qu.: 0.00       1st Qu.: 0.0  
-Median : 3.000   Median : 2.00       Median : 7.0  
-Mean   : 8.886   Mean   :15.09       Mean   : 9.6  
-3rd Qu.:11.500   3rd Qu.:31.00       3rd Qu.:12.5  
-Max.   :64.000   Max.   :43.00       Max.   :43.0  
+\noindent Similar to the previous test subject, \Cref{tbl:rq5-first-failure} enlists how many test cases have been executed before the first failure. The table only considers the four main algorithms, since the actual prediction performance was only secondary to this research question and only a small amount of test runs have been analysed. The results suggest that every algorithm except the ROCKET achieves a high prediction accuracy on this project.
 
-Alpha            Rocket       GreedyTimeAll   
-Min.   : 0.000   Min.   :  0.00   Min.   :  0.00  
-1st Qu.: 0.000   1st Qu.:  3.50   1st Qu.:  3.50  
-Median : 1.000   Median : 27.00   Median : 27.00  
-Mean   : 8.971   Mean   : 42.23   Mean   : 42.23  
-3rd Qu.:13.000   3rd Qu.: 49.00   3rd Qu.: 49.00  
-Max.   :44.000   Max.   :216.00   Max.   :216.00  
+\begin{table}[h]
+	\centering
+	\begin{tabularx}{\textwidth}{|X||c|c|c|c|}
+		\hline
+		\textbf{Algorithm} & \textbf{Minimum} & \textbf{Mean} & \textbf{Median} & \textbf{Maximum}\\
+		
+		\hline
+		
+		\emph{Original} & $\SI{0}{}$ & $\SI{68}{}$ & $\SI{2}{}$ & $\SI{278}{}$\\
+		
+		\hline
+		
+		Alpha & $\SI{0}{}$ & $\SI{10}{}$ & $\SI{2}{}$ & $\SI{57}{}$\\
+		
+		\hline
+		
+		GreedyCoverAll & $\SI{0}{}$ & $\SI{11}{}$ & $\SI{3}{}$ & $\SI{57}{}$\\
+		
+		\hline
+		
+		HGSAll & $\SI{0}{}$ & $\SI{9}{}$ & $\SI{4}{}$ & $\SI{50}{}$\\
+		
+		\hline
+		
+		ROCKET & $\SI{0}{}$ & $\SI{42}{}$ & $\SI{27}{}$ & $\SI{216}{}$\\
+		
+		\hline
+	\end{tabularx}
+	\caption{Amount of executed test cases until the first failure.}
+	\label{tbl:rq5-first-failure}
+\end{table}
 
-Original\_ms      AllRandom\_ms    AllInOrder\_ms   
-Min.   :     0   Min.   :     0   Min.   :     0  
-1st Qu.:     0   1st Qu.:     0   1st Qu.:     0  
-Median :  9560   Median :   739   Median :   862  
-Mean   : 73612   Mean   : 13299   Mean   : 32391  
-3rd Qu.:122586   3rd Qu.: 13592   3rd Qu.: 78063  
-Max.   :283433   Max.   :184805   Max.   :139345  
+\noindent Even though the performance of the ROCKET algorithm is suboptimal in the previous table, \Cref{tbl:rq5-first-failure-duration} does indicate that it outperforms every other algorithm time-wise. Notice that the predicted sequence of the HGS algorithm takes the longest to execute, while the previous table suggested a good prediction accuracy. The Alpha and Greedy algorithms seem very similar on both the amount of executed test cases, as well as the execution time.
 
-GreedyCoverAll\_ms AffectedRandom\_ms HGSAffected\_ms  
-Min.   :     0    Min.   :     0    Min.   :     0  
-1st Qu.:     0    1st Qu.:     0    1st Qu.:     0  
-Median :   620    Median :   317    Median :  1318  
-Mean   : 15251    Mean   : 19732    Mean   : 23738  
-3rd Qu.:  8620    3rd Qu.:  6460    3rd Qu.: 11786  
-Max.   :197463    Max.   :174491    Max.   :211702  
+\begin{table}[h]
+	\centering
+	\begin{tabularx}{\textwidth}{|X||c|c|c|c|}
+		\hline
+		\textbf{Algorithm} & \textbf{Minimum} & \textbf{Mean} & \textbf{Median} & \textbf{Maximum}\\
+		
+		\hline
+		
+		\emph{Original} & $\SI{0}{\second}$ & $\SI{62}{\second}$ & $\SI{8}{\second}$ & $\SI{233}{\second}$\\
 
-GreedyCoverAffected\_ms   HGSAll\_ms         Alpha\_ms     
-Min.   :    0          Min.   :     0   Min.   :     0  
-1st Qu.:    0          1st Qu.:     0   1st Qu.:     0  
-Median : 4229          Median :  2818   Median :   647  
-Mean   :21835          Mean   : 12494   Mean   : 15189  
-3rd Qu.:37885          3rd Qu.:  8475   3rd Qu.:  8386  
-Max.   :75637          Max.   :157003   Max.   :193618  
+		\hline
+		
+		Alpha & $\SI{0}{\second}$ & $\SI{11}{\second}$ & $\SI{2}{\second}$ & $\SI{103}{\second}$\\
+		
+		\hline
+		
+		GreedyCoverAll & $\SI{0}{\second}$ & $\SI{12}{\second}$ & $\SI{2}{\second}$ & $\SI{103}{\second}$\\
+		
+		\hline
+		
+		HGSAll & $\SI{0}{\second}$ & $\SI{19}{\second}$ & $\SI{1}{\second}$ & $\SI{130}{\second}$\\
+		
+		\hline
+		
+		ROCKET & $\SI{0}{\second}$ & $\SI{6}{\second}$ & $\SI{0}{\second}$ & $\SI{85}{\second}$\\
+		
+		\hline
+	\end{tabularx}
+	\caption{Amount of executed test cases until the first failure.}
+	\label{tbl:rq5-first-failure-duration}
+\end{table}
 
-Rocket\_ms      GreedyTimeAll\_ms      idx      
-Min.   :     0   Min.   :    0    Min.   : 1.0  
-1st Qu.:     0   1st Qu.:    0    1st Qu.: 9.5  
-Median :   254   Median :  257    Median :18.0  
-Mean   :  6844   Mean   : 6852    Mean   :18.0  
-3rd Qu.:  1760   3rd Qu.: 1754    3rd Qu.:26.5  
-Max.   :100011   Max.   :99765    Max.   :35.0  
+\noindent \Cref{fig:rq5-performance} further confirms the above statements. Notice the close resemblance of the charts of the Greedy algorithm and the Alpha algorithm, indicating that almost every test run failure was caused by a different failing test case. The ROCKET algorithm performs better on this project than on Dodona, yet not accurate.
+
+\begin{figure}[!hbp]
+	\subfloat[Alpha algorithm]{%
+		\includegraphics[width=\textwidth]{assets/charts/rq5-stratego-alpha.pdf}
+	}
+\end{figure}
+\begin{figure}[!hbp]
+	\ContinuedFloat
+	\subfloat[Greedy algorithm]{%
+		\includegraphics[width=\textwidth]{assets/charts/rq5-stratego-greedy.pdf}
+	}
+\end{figure}
+\begin{figure}[!hbp]
+	\ContinuedFloat
+	\subfloat[HGS algorithm]{%
+		\includegraphics[width=\textwidth]{assets/charts/rq5-stratego-hgs.pdf}
+	}
+\end{figure}
+\begin{figure}[!hbp]
+	\ContinuedFloat
+	\centering
+	\subfloat[ROCKET algorithm]{%
+		\includegraphics[width=\textwidth]{assets/charts/rq5-stratego-rocket.pdf}
+	}
+	\caption{Prediction performance on the Stratego project}
+	\label{fig:rq5-performance}
+\end{figure}
