--- a/paper/introduction.tex
+++ b/paper/introduction.tex
@@ -10,4 +10,8 @@ Given the complexity and rapid pace at which software is being built today, it i
 
 \noindent However, applying these practices and maintaining a qualitative test comes at a cost. After every addition or modification to the source code, at least one new test case must be introduced to validate its correctness. As a result of the speed at which the source code tends to grow, the test suite suffers from severe scalability issues. While it is desirable and ideally required to execute every single test case in the test suite, there are examples known to literature where this is not possible since this incurs an increasing delay in the development process, which in turn results in economic loss.\\
 
-\noindent Three approaches can be taken towards resolving this issue by reducing the time waiting for the test results: \acrfull{tsm}, \acrfull{tcs} and \acrfull{tcp}. The main subject of this thesis will be to implement a framework for \acrshort{tcp}. To accomplish this, the next chapter will introduce important concepts which are used in modern software engineering. \Cref{ch:related-work} will elaborate on the aforementioned approaches and present accompanying algorithms. The implementation details of the new framework will be discussed in \cref{ch:velocity}. Afterwards, \cref{ch:evaluation} will evaluate the performance of this framework and provide insights into the characteristics of a typical test suite. More specifically, this chapter will investigate the probability of (repeated) test failure and the average duration of a test run. Finally, \cref{ch:conclusion} will present additional ideas and improvements to the framework.
+\noindent Three approaches can be taken towards resolving this issue by reducing the time waiting for the test results: \acrfull{tsm}, \acrfull{tcs} and \acrfull{tcp}. The main subject of this thesis will be to implement a framework for \acrshort{tcp}.
+
+\clearpage
+
+\noindent To accomplish this, the next chapter will introduce important concepts which are used in modern software engineering. \Cref{ch:related-work} will elaborate on the aforementioned approaches and present accompanying algorithms. The implementation details of the new framework will be discussed in \cref{ch:velocity}. Afterwards, \cref{ch:evaluation} will evaluate the performance of this framework and provide insights into the characteristics of a typical test suite. More specifically, this chapter will investigate the probability of (repeated) test failure and the average duration of a test run. Finally, \cref{ch:conclusion} will present additional ideas and improvements to the framework.
