--- a/paper/acknowledgements.tex
+++ b/paper/acknowledgements.tex
@@ -4,13 +4,13 @@
 
 Completing this thesis would not have been possible without the help and support of many people, some of which I want to thank personally.\\
 
-\noindent First of all I want to thank prof. dr. Bruno Volckaert and prof. dr. ir. Filip De Turck for allowing me to propose my own subject and for their prompt and clear responses to every question I have asked. I especially want to thank you for giving me the permission to insert a two-week hiatus during the Easter break, so I could help out on the UGent Dodona project.\\
+\noindent First of all, I want to thank prof. dr. Bruno Volckaert and prof. dr. ir. Filip De Turck for allowing me to propose this subject and for their prompt and clear responses to every question I have asked. I especially want to thank you for permitting me to insert a two-week hiatus during the Easter break, so I could help out on the UGent Dodona project.\\
 
-\noindent Secondly I want to express my gratitude towards my counsellors Jasper Vaneessen and Dwight Kerkhove, for steering me into researching this topic, as well as their guidance, availability, and willingness to review every intermediary version of this thesis.\\
+\noindent Secondly, I want to express my gratitude towards my counsellors Jasper Vaneessen and Dwight Kerkhove, for steering me into researching this topic, as well as their guidance, availability, and willingness to review every intermediary version of this thesis.\\
 
-\noindent Furthermore I want to thank my parents, my brother Stijn and my family for convincing me and giving me the possibility to study at the university, to support me throughout my entire academic career and to provide me the opportunity to pursue my childhood dreams.\\
+\noindent Furthermore, I want to thank my parents, my brother Stijn and my family for convincing me and giving me the possibility to study at the university, to support me throughout my entire academic career and to provide me with the opportunity to pursue my childhood dreams.\\
 
-\noindent Last, but definitely not least, I want to thank my amazing friends, a few of them in particular. My best friend Robbe, for always being there when I need him, even when I least expect it, for both supporting as well as protecting me against my sometimes unrealistic ideas and ambition to excel. Helena for never leaving my side, for always making me laugh even when I don't want to, and most importantly to remind me that I should relax more often. Jana for my daily dose of laughter and fun, and for her inexhaustible positivity. Tobiah for the endless design discussions and for outperforming me in almost every school project, encouraging me to continuously raise the bar and never give up. Finally I want to thank Doortje and Freija for answering my mathematical questions, regularly asking about my thesis progression and thereby motivating me to persevere.\\
+\noindent Last, but surely not least, I want to thank my amazing friends, a few of them in particular. My best friend Robbe, for always being there when I need him even when I least expect it. For both supporting my wildest dreams while protecting me against my often unrealistic ideas and ambition to excel. Helena for never leaving my side, for always making me laugh when I don't want to, and most importantly to remind me that I should relax from time to time. Jana for my daily dose of laughter, fun and inexhaustible positivity. Tobiah for the endless design discussions and for outperforming me in almost every school project, to encourage me to continuously raise the bar and to never give up. Finally, I want to thank Doortje and Freija for answering my mathematical questions, regularly asking about my thesis progression and thereby motivating me to persevere.\\
 
 \noindent \emph{Thank you.}\\
 
