--- a/paper/evaluation.tex
+++ b/paper/evaluation.tex
@@ -2,9 +2,10 @@
 
 \chapter{Evaluation}
 \label{ch:evaluation}
-This chapter will evaluate the performance of the previously presented \velocity{} framework. In the first section, the two test subjects that will be used in the subsequent experiments will be introduced. The next section will restate the research questions formally, and extend these. Afterwards, the procedure of how the data was obtained will be elaborated. The final section will provide answers to the research questions as well as present the results of applying \acrlong{tcp} to the test subjects.
+This chapter will evaluate the performance of framework presented in the previous chapter. In the first section, the two test subjects that will be used in the subsequent experiments will be introduced. The next section will restate the research questions formally, and extend these. Afterwards, the procedure of how the data was obtained will be elaborated. The final section will provide answers to the research questions as well as present the results of applying \tcp{} to the test subjects.
 
 \input{evaluation/test-subjects.tex}
 \input{evaluation/research-questions.tex}
 \input{evaluation/data-collection.tex}
+\clearpage
 \input{evaluation/results.tex}
