--- a/paper/evaluation/data-collection.tex
+++ b/paper/evaluation/data-collection.tex
@@ -1,6 +1,7 @@
 % !TeX root = ../thesis.tex
 
-\section{Data collection}\label{sec:eval-data}
-
+\section{Data collection}
+\label{sec:eval-data}
 \input{evaluation/data-collection/travis.tex}
 \input{evaluation/data-collection/dodona.tex}
+\input{evaluation/data-collection/stratego.tex}
