--- a/paper/evaluation/research-questions.tex
+++ b/paper/evaluation/research-questions.tex
@@ -4,16 +4,16 @@
 The following research questions will be answered in the subsequent sections:
 
 \paragraph*{RQ1: What is the probability that a test run will contain at least one failed test case?}
-The first research question will provide useful insights into whether a typical test run has a tendency towards failing or succeeding. It is expected that a typical test run will succeed and therefore that executing every test case is not strictly necessary.
+The first research question will provide useful insights into whether a typical test run tends to fail or not. It is expected that the probability of failure will be rather low, indicating that it is not strictly necessary to execute every test case and therefore proving the use of \tsm{}.
 
-\paragraph*{RQ2: If a test run has failed, what is the probability that the next run will fail as well?}
-The ROCKET algorithm (\autoref{ssec:alg-rocket}) relies on the assumption that if a test case has failed in a given run, it will most likely fail in the subsequent run as well. This research question will investigate the correctness of this hypothesis.
+\paragraph*{RQ2: What is the average duration of a test run?}
+Measuring how long it takes to execute a typical test run is required to estimate the benefit of applying any form of test suite optimisation. Only successful test runs should be considered to reduce bias introduced by prematurely aborting the execution.
 
-\paragraph*{RQ3: What is the average duration of a test run?}
-Measuring how long it takes to execute a typical test run is required to estimate the benefit of applying any form of test suite optimisation. Only successful test runs should be considered to reduce bias introduced by prematurely aborting execution.
+\paragraph*{RQ3: Suppose that a test run has failed, what is the probability that the next run will fail as well?}
+The ROCKET algorithm (\cref{ssec:alg-rocket}) relies on the assumption that if a test case has failed in a given test run, it is likely to fail in the subsequent run as well. This research question will investigate the correctness of this hypothesis.
 
-\paragraph*{RQ4: What is the performance of applying \tcp{} to Dodona?}
-This research question will investigate how quickly a failing test case in the Dodona project can be discovered using \velocity{}.
+\paragraph*{RQ4: How can \tcp{} be applied to Dodona and what is the resulting performance benefit?}
+This research question will investigate the possibility to apply the \velocity{} framework to the Dodona project and analyse how quickly a failing test case can be discovered using the available predictors.
 
-\paragraph*{RQ5: What is the performance of applying \tcp{} to Stratego?}
-This research question will investigate how quickly a failing test case in the Stratego project can be discovered using \velocity{}.
+\paragraph*{RQ5: Can the Java agent be applied to Stratego?}
+Since the testing framework used by Stratego should be supported natively by the Java agent, this research question will verify its compatibility. Furthermore, the prediction performance will be analysed, albeit with a small number of appropriate test runs.
