--- a/paper/conclusion.tex
+++ b/paper/conclusion.tex
@@ -30,7 +30,7 @@ The proposed meta predictor increases the score of every predictor which predict
 
 \begin{figure}[htbp!]
 	\centering
-	\includegraphics[width=\textwidth]{assets/images/saturating-counter.pdf}
+	\input{assets/tikz/saturating-counter.tex}
 	\caption{Saturating counter}
 	\label{fig:saturating-counter}
 \end{figure}
